--- a/LAB-TBD/pom.xml
+++ b/LAB-TBD/pom.xml
@@ -27,7 +27,11 @@
 			<version>1.18.32</version>
 			<scope>provided</scope>
 		</dependency>
-
+		<dependency>
+			<groupId>org.sql2o</groupId>
+			<artifactId>sql2o</artifactId>
+			<version>1.6.0</version>
+		</dependency>
 		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
