--- a/LAB-TBD/src/main/resources/application.properties
+++ b/LAB-TBD/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-spring.application.name=LAB-TBD
+spring.application.name = LAB-TBD
 
-server.port=8080
+server.port = 8080
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/LabTBD-1-2024
-spring.datasource.username=postgres
-spring.datasource.password=1502
-spring.jpa.hibernate.ddl-auto=create
+spring.datasource.url = jdbc:postgresql://localhost:5432/LabTBD-1-2024
+spring.datasource.username = postgres
+spring.datasource.password = 12345678
+spring.datasource.driverClassName=org.postgresql.Driver
